# vize

./: .envrc  .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  clippy.toml  flake.nix  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
crates/vize_patina/: Cargo.toml  README.md
crates/vize_patina/benches/: lint_bench.rs
crates/vize_patina/src/: context.rs  ir.rs  lib.rs  linter.rs  markup.rs  preset.rs  rule.rs  style.rs  telegraph.rs  visitor.rs
crates/vize_patina/src/context/: helpers.rs  mod.rs
crates/vize_patina/src/diagnostic/: formatting.rs  mod.rs  types.rs
crates/vize_patina/src/linter/: config.rs  corsa_session.rs  engine.rs  mod.rs  native_type_aware.rs  script_rules.rs
crates/vize_patina/src/linter/corsa_session/: errors.rs  paths.rs  probe.rs  session.rs  tests.rs
crates/vize_patina/src/linter/native_type_aware/: driver.rs  markers.rs  parsing.rs  rule_queries.rs  template_queries.rs  tests.rs
crates/vize_patina/src/linter/snapshots/: vize_patina__linter__native_type_aware__tests__type_aware_diagnostics_snapshot.snap  vize_patina__linter__tests__html_markup_ir_diagnostics.snap  vize_patina__linter__tests__jsx_markup_ir_diagnostics.snap
crates/vize_patina/src/linter/tests/: basic.rs  directives.rs  mod.rs  sfc.rs
crates/vize_patina/src/output/: text.rs
crates/vize_patina/src/rules/: mod.rs
crates/vize_patina/src/rules/a11y/: aria_props.rs  aria_role.rs  form_control_has_label.rs  landmark_roles.rs  mod.rs  (+2 more)
crates/vize_patina/src/snapshots/: vize_patina__preset__tests__lint_preset_rule_membership.snap
tests/vize_test_runner/: Cargo.toml
tests/vize_test_runner/src/: coverage.rs  dump_patches.rs  lib.rs
(+1920 files in other folders)
