[package]
name = "vize_test_runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "coverage"
path = "src/coverage.rs"

[[bin]]
name = "dump_patches"
path = "src/dump_patches.rs"

[dependencies]
vize_atelier_core.workspace = true
vize_atelier_vapor.workspace = true
vize_atelier_sfc.workspace = true
vize_carton.workspace = true
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
